fix navbar overlapping

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,12 +4,15 @@
     height: 100%;
     grid-row: 1/2;
     grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 100%;
     column-gap: 10px;
 }
 
 #size-slider-container {
     display: grid;
+    height: 100%;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 100%;
     column-gap: 2px;
     grid-column: 1/3;
 }
